# CLI-axora

./: README.md  install.sh  setup_ollama.sh
axora/: .env.example  .gitignore  Makefile  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  uninstall.sh
axora/axora/agent/: core.py
axora/axora/cli/: main.py
axora/axora/cli/commands/: agent.py  chat.py  config.py  dev.py  models.py  server.py  setup.py
axora/axora/config/: manager.py
axora/axora/server/: app.py  runner.py
axora/axora/tools/: executor.py
axora/axora/utils/: ai_client.py  banner.py  crypto.py  logger.py  status.py
axora/tests/: test_axora.py
